Changes for 1.5
* Phase 3 of abstraction of RulesAttachment and TriggerAttachment and PoliticalActionAttachment: the creation of an abstract class to hold all common cold related to conditions. (veqryn)

* Created new rules attachment for conditions, chance, which allows you to have a certain chance for a condition to be true. (veqryn)

* Temporary fix for the issues caused by only testing political conditions once.  Now we test them after each political action. (veqryn)

* Updated political action attachments validation to only test once per politics phase for all the conditions for each action. (veqryn)

* Created new relationship attachment, givesBackOriginalTerritories, which lets a player give back originally controlled territories to another player. (veqryn)

* Changing PropertyUtil from using getClass().getDeclaredMethods() to using getClass().getMethods() for changing data inside game data objects, like units, players, attachments, etc. (veqryn & frigoref)

* Extended Objective/Condition attachment count "each" to work with Triggers "resource", "purchase", and "placement". (veqryn)

* Fixing null pointer errors and conceptual problems with my way of testing all conditions. (veqryn)

* Phase 2 of abstraction and refactoring of TriggerAttachments: now all triggers get called through a single method, collectAndFireTriggers. (veqryn)

* Created getAllConditionsRecursive and testAllConditions which will test get and test all IConditions, and now all RulesAttachments get tested through these. (veqryn)

* Had RulesAttachment, TriggerAttachment, and PoliticalActionAttachment all implement IConditions. (veqryn)

* Created IConditions, and interface for any Attachment that had conditions as a part of it. (veqryn)

* Moved actions for victory trigger and notification trigger to be part of the trigger attachment so that they will return void, and therefore can abstract easier. (veqryn)
